src/test/deca/context/invalid/homemade/tests/test25_variable_nom_methode_class_mere.deca
// test invalide de la règle 2.5

class A  {
    int x = 3;
    void calcul(){
        this.x = 4;
    }
}

class B extends A{

    int calcul = 8;
}
